--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
+  <title>Vishnu Personal Website</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/hat.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -73,24 +73,20 @@
       <ul>
         <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
         <li><a href="#about"><i class="bi bi-person navicon"></i> About</a></li>
+        <li><a href="#skills"><i class="bi bi-bar-chart-line navicon"></i> Skills</a></li>
+
         <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
-        <li class="dropdown"><a href="#"><i class="bi bi-menu-button navicon"></i> <span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-          <ul>
-            <li><a href="#">Dropdown 1</a></li>
-            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-              <ul>
-                <li><a href="#">Deep Dropdown 1</a></li>
-                <li><a href="#">Deep Dropdown 2</a></li>
-                <li><a href="#">Deep Dropdown 3</a></li>
-                <li><a href="#">Deep Dropdown 4</a></li>
-                <li><a href="#">Deep Dropdown 5</a></li>
-              </ul>
-            </li>
-            <li><a href="#">Dropdown 2</a></li>
-            <li><a href="#">Dropdown 3</a></li>
-            <li><a href="#">Dropdown 4</a></li>
-          </ul>
-        </li>
+        <li><a href="#services"><i class="bi bi-briefcase navicon"></i> Services</a></li>
+
+<li class="dropdown"><a href="#"><i class="bi bi-award navicon"></i> <span>More</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+  <ul>
+    <li><a href="#" data-section="achievements"><i class="bi bi-trophy"></i> Achievements</a></li>
+    <li><a href="#" data-section="certifications"><i class="bi bi-patch-check"></i> Certifications</a></li>
+    <li><a href="#" data-section="project-demos"><i class="bi bi-sliders2"></i> Project Demos</a></li>
+  </ul>
+</li>
+
+
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
@@ -134,7 +130,7 @@
       <div class="col-lg-8 content">
         <h2>Machine Learning Engineer & AI Enthusiast</h2>
         <p class="fst-italic py-3">
-          Passionate about solving real-world problems through intelligent systems that blend AI, signal processing, and software engineering.
+         Passionate about building intelligent systems at the intersection of machine learning, system architecture, and cybersecurity to solve real-world challenges.
         </p>
         <div class="row">
           <div class="col-lg-6">
@@ -147,7 +143,7 @@
           </div>
           <div class="col-lg-6">
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BTech (ECE + AI Minor)</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>vishnu107109@gmail.com</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -204,75 +200,97 @@
   </div>
 
 </section><!-- /Stats Section -->
-
- <!-- Skills Section -->
+<!-- Skills Section -->
 <section id="skills" class="skills section light-background">
 
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Skills</h2>
     <p>Hands-on with machine learning, deep learning, cloud computing, and deployment across multiple environments using modern developer tools and frameworks.</p>
-  </div><!-- End Section Title -->
+  </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="skills-grid">
 
-    <div class="row skills-content skills-animation">
-
-      <div class="col-lg-6">
-
-        <div class="progress">
-          <span class="skill"><span>Python</span> <i class="val">95%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-
-        <div class="progress">
-          <span class="skill"><span>PyTorch / TensorFlow</span> <i class="val">90%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-
-        <div class="progress">
-          <span class="skill"><span>Flask / Web Development</span> <i class="val">85%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
-
+      <div class="skill-icon python" data-tooltip="Python">
+        <img src="./assets/img/python2.png" alt="Python">
       </div>
 
-      <div class="col-lg-6">
+      <div class="skill-icon cpp" data-tooltip="C++">
+        <img src="./assets/img/cpp.png" alt="C++">
+      </div>
 
-        <div class="progress">
-          <span class="skill"><span>Cloud (AWS / GCP / Azure)</span> <i class="val">80%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
+      <div class="skill-icon java" data-tooltip="Java">
+        <img src="./assets/img/java.png" alt="Java">
+      </div>
 
-        <div class="progress">
-          <span class="skill"><span>Kubernetes / Docker</span> <i class="val">75%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
+      <div class="skill-icon matlab" data-tooltip="MATLAB">
+        <img src="./assets/img/matlab.png" alt="MATLAB">
+      </div>
 
-        <div class="progress">
-          <span class="skill"><span>Power BI / Data Analysis</span> <i class="val">70%</i></span>
-          <div class="progress-bar-wrap">
-            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-          </div>
-        </div>
+      <div class="skill-icon html" data-tooltip="HTML">
+        <img src="./assets/img/html5.png" alt="HTML">
+      </div>
 
+      <div class="skill-icon css" data-tooltip="CSS">
+        <img src="./assets/img/css3.png" alt="CSS">
+      </div>
+
+      <div class="skill-icon javascript" data-tooltip="JavaScript">
+        <img src="./assets/img/javascript.png" alt="JavaScript">
+      </div>
+
+      <div class="skill-icon flask" data-tooltip="Flask">
+        <img src="./assets/img/flask.png" alt="Flask">
+      </div>
+
+      <div class="skill-icon pytorch" data-tooltip="PyTorch">
+        <img src="./assets/img/pytorch.png" alt="PyTorch">
+      </div>
+
+      <div class="skill-icon tensorflow" data-tooltip="TensorFlow">
+        <img src="./assets/img/tensorflow.png" alt="TensorFlow">
+      </div>
+
+      <div class="skill-icon powerbi" data-tooltip="Power BI">
+        <img src="./assets/img/powerbi.png" alt="Power BI">
+      </div>
+
+      <div class="skill-icon aws" data-tooltip="AWS">
+        <img src="./assets/img/aws.png" alt="AWS">
+      </div>
+
+      <div class="skill-icon azure" data-tooltip="Azure">
+        <img src="./assets/img/azure.png" alt="Azure">
+      </div>
+
+      <div class="skill-icon kubernetes" data-tooltip="Kubernetes">
+        <img src="./assets/img/kubernetes.png" alt="Kubernetes">
+      </div>
+
+      <div class="skill-icon docker" data-tooltip="Docker">
+        <img src="./assets/img/docker.png" alt="Docker">
+      </div>
+
+      <div class="skill-icon git" data-tooltip="Git">
+        <img src="./assets/img/git.png" alt="Git">
+      </div>
+
+      <div class="skill-icon vscode" data-tooltip="VS Code">
+        <img src="./assets/img/vs-code.png" alt="VS Code">
+      </div>
+
+      <div class="skill-icon dbms" data-tooltip="DBMS">
+        <img src="./assets/img/dbms.png" alt="DBMS">
       </div>
 
     </div>
-
   </div>
 
-</section><!-- /Skills Section -->
+</section>
+
+
+
 <!-- Resume Section -->
 <section id="resume" class="resume section">
 
@@ -322,7 +340,7 @@
           <p><em>Semantic Segmentation | GCA & LCA | Remote Sensing</em></p>
           <ul>
             <li>Developed an AI model for land segmentation using Google Earth Engine & DeepLabV3+.</li>
-            <li><a href="https://github.com/memes-mami/Semantic-seg" target="_blank">GitHub Repository</a></li>
+            <li><a href="https://github.com/memes-mami/rssegmentation" target="_blank">GitHub Repository</a></li>
           </ul>
         </div>
 
@@ -331,7 +349,7 @@
           <p><em>Video Generation Consistency Project</em></p>
           <ul>
             <li>Developed a PyTorch pipeline for generating temporally consistent AI videos.</li>
-            <li><a href="https://github.com/memes-mami/consisti2v" target="_blank">GitHub Repository</a></li>
+            <li><a href="https://github.com/memes-mami/Consistenti2v" target="_blank">GitHub Repository</a></li>
           </ul>
         </div>
 
@@ -340,7 +358,7 @@
           <p><em>NLP | Flask | Whisper API</em></p>
           <ul>
             <li>Built an interactive voice/text chatbot using speech-to-text & OpenAI APIs.</li>
-            <li><a href="https://github.com/memes-mami/college_bot" target="_blank">GitHub Repository</a></li>
+            <li><a href="https://github.com/memes-mami/ChatBot" target="_blank">GitHub Repository</a></li>
           </ul>
         </div>
 
@@ -499,25 +517,25 @@
         <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
 
-            <div class="col-md-6">
-              <label for="name-field" class="pb-2">Your Name</label>
-              <input type="text" name="name" id="name-field" class="form-control" required="">
-            </div>
+          <div class="col-md-6">
+  <label for="name-field" class="pb-2">Your Name</label>
+  <input type="text" name="name" id="name-field" class="form-control" required placeholder="e.g., Vishnu Teja">
+</div>
 
-            <div class="col-md-6">
-              <label for="email-field" class="pb-2">Your Email</label>
-              <input type="email" class="form-control" name="email" id="email-field" required="">
-            </div>
+<div class="col-md-6">
+  <label for="email-field" class="pb-2">Your Email</label>
+  <input type="email" class="form-control" name="email" id="email-field" required placeholder="e.g., you@example.com">
+</div>
 
-            <div class="col-md-12">
-              <label for="subject-field" class="pb-2">Subject</label>
-              <input type="text" class="form-control" name="subject" id="subject-field" required="">
-            </div>
+<div class="col-md-12">
+  <label for="subject-field" class="pb-2">Subject</label>
+  <input type="text" class="form-control" name="subject" id="subject-field" required placeholder="e.g., Collaboration on ML project">
+</div>
 
-            <div class="col-md-12">
-              <label for="message-field" class="pb-2">Message</label>
-              <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
-            </div>
+<div class="col-md-12">
+  <label for="message-field" class="pb-2">Message</label>
+  <textarea class="form-control" name="message" rows="10" id="message-field" required placeholder="e.g., Hi Vishnu, I’m interested in discussing a project related to AI deployment on cloud..."></textarea>
+</div>
 
             <div class="col-md-12 text-center">
               <div class="loading">Loading</div>
@@ -536,6 +554,47 @@
   </div>
 
 </section><!-- /Contact Section -->
+
+
+<!-- Achievements Section -->
+<section id="achievements-section" class="section" style="display: none;">
+  <div class="container section-title">
+    <h2>Achievements</h2>
+    <ul class="list-group">
+      <li class="list-group-item">✔ Selected for Amazon ML School</li>
+      <li class="list-group-item">✔ IEEE Publication on AI Optimization</li>
+    </ul>
+    <button onclick="goBack()" class="btn btn-secondary mt-4"><i class="bi bi-arrow-left"></i> Back</button>
+  </div>
+</section>
+
+<!-- Certifications Section -->
+<section id="certifications-section" class="section" style="display: none;">
+  <div class="container section-title">
+    <h2>Certifications</h2>
+    <ul class="list-group">
+      <li class="list-group-item">✅ NPTEL - Machine Learning</li>
+      <li class="list-group-item">✅ Coursera - Cybersecurity</li>
+    </ul>
+    <button onclick="goBack()" class="btn btn-secondary mt-4"><i class="bi bi-arrow-left"></i> Back</button>
+  </div>
+</section>
+
+<!-- Project Demos Section -->
+<section id="project-demos-section" class="section" style="display: none;">
+  <div class="container section-title">
+    <h2>Project Demos</h2>
+    <ul class="list-group">
+      <li class="list-group-item">
+        <strong>Logsscan+</strong> – <a href="https://github.com/memes-mami/rssegmentation" target="_blank">GitHub</a>
+      </li>
+      <li class="list-group-item">
+        <strong>Consisti2V</strong> – <a href="https://github.com/memes-mami/Consistenti2v" target="_blank">GitHub</a>
+      </li>
+    </ul>
+    <button onclick="goBack()" class="btn btn-secondary mt-4"><i class="bi bi-arrow-left"></i> Back</button>
+  </div>
+</section>
 
 
   </main>
