--- a/index.html
+++ b/index.html
@@ -952,6 +952,16 @@
           </a>
         </div>
       </div>
+            <div class="col">
+        <div class="card h-100">
+          <a href="assets/pdfs/dlwithpytorch.pdf" target="_blank" class="text-decoration-none text-center d-block p-3">
+            <div class="pdf-frame-wrapper mb-2">
+              <iframe src="assets/pdfs/dlwithpytorch.pdf#toolbar=0&navpanes=0&scrollbar=0"></iframe>
+            </div>
+            <h6 class="text-muted">Deep learning: GAN Network </h6>
+          </a>
+        </div>
+      </div>
 
       <div class="col">
         <div class="card h-100">
