--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+  
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
@@ -130,7 +133,7 @@
   <!-- Hero Section -->
 <section id="hero" class="hero section dark-background">
 
-  <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+  <img src="assets/img/hero-bg.jpg" loading="lazy" alt="" data-aos="fade-in" class="">
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
     <div class="text-overlay">
@@ -157,7 +160,7 @@
 
     <div class="row gy-4 justify-content-center">
       <div class="col-lg-4">
-        <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+        <img src="assets/img/my-profile-img.jpg" class="img-fluid" loading="lazy" alt="">
       </div>
       <div class="col-lg-8 content">
         <h2>Machine Learning Engineer & AI Enthusiast</h2>
