--- a/index.html
+++ b/index.html
@@ -135,14 +135,17 @@
 
   <img src="assets/img/hero-bg.jpg" loading="lazy" alt="" data-aos="fade-in" class="">
 
-  <div class="container" data-aos="fade-up" data-aos-delay="100">
-    <div class="text-overlay">
-      <h2>Vishnu Teja.M</h2>
-      <p>I'm <span class="typed" data-typed-items="ML Enthusiast,Cloud Developer, Python Enthusiast">Designer</span>
-        <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
-      </p>
-    </div>
+<!-- Inside #hero section -->
+<div class="hero-name-box"  data-aos="fade-up" data-aos-delay="100">
+  <div class="text-overlay">
+    <h2>Vishnu Teja.M</h2>
+    <p>
+      I'm <span class="typed" data-typed-items="ML Enthusiast,Cloud Developer, Python Enthusiast">Designer</span>
+      <span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
+    </p>
   </div>
+</div>
+
 
 </section><!-- /Hero Section -->
 
@@ -984,7 +987,7 @@
       transition: color 0.4s;
       display: inline-flex;
       align-items: center;
-  padding: 0.6em 1.1em 0.6em 1em; /* ↓ padding all sides */
+      padding: 0.6em 1.1em 0.6em 1em;
     }
 
     .cssbuttons-io::before,
@@ -1018,129 +1021,136 @@
   <div class="container">
     <h2 class="text-center mb-5">Projects</h2>
 
-   <!-- Project 1: RS Segmentation -->
-<div class="row align-items-center mb-5">
-  <div class="col-md-6">
-    <img src="assets/img/rss.png" class="img-fluid rounded shadow" alt="RS Segmentation">
-  </div>
+    <!-- Project 1: RS Segmentation -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <img src="assets/img/rss.png" class="img-fluid rounded shadow mb-4" alt="RS Segmentation">
+      </div>
+      <div class="col-md-6">
+        <h4>RS Segmentation Toolbox</h4>
+        <ul>
+          <li>Semantic segmentation for high-resolution urban and rural satellite imagery.</li>
+          <li>Helps identify regions like buildings, roads, vegetation, and water bodies.</li>
+          <li>Useful in <strong>urban planning</strong>, <strong>agriculture monitoring</strong>, <strong>land-use mapping</strong>, and <strong>disaster response</strong>.</li>
+          <li>Supports benchmark datasets: Vaihingen, Potsdam, LoveDA.</li>
+          <li>Includes CAMs, TSNE visualizations, and real-time optimized RepViT models.</li>
+        </ul>
+        <p><strong>Tech Stack:</strong> PyTorch, RepViT</p>
+        <a href="https://github.com/memes-mami/rssegmentation" target="_blank">
+          <button class="cssbuttons-io">
+            <span>
+              <svg viewBox="0 0 24 24">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
+              </svg>
+              Code
+            </span>
+          </button>
+        </a>
+      </div>
+    </div>
 
-  <div class="col-md-6">
-    <h4>RS Segmentation Toolbox</h4>
-    <ul>
-      <li>Semantic segmentation for high-resolution urban and rural satellite imagery.</li>
-      <li>Helps identify regions like buildings, roads, vegetation, and water bodies.</li>
-      <li>Useful in <strong>urban planning</strong>, <strong>agriculture monitoring</strong>, <strong>land-use mapping</strong>, and <strong>disaster response</strong>.</li>
-      <li>Supports benchmark datasets: Vaihingen, Potsdam, LoveDA.</li>
-      <li>Includes CAMs, TSNE visualizations, and real-time optimized RepViT models.</li>
-    </ul>
-    <p><strong>Tech Stack:</strong> PyTorch, RepViT</p>
-    <a href="https://github.com/memes-mami/rssegmentation" target="_blank">
-      <button class="cssbuttons-io">
-        <span>
-          <svg viewBox="0 0 24 24">
-            <path d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
-          </svg>
-          Code
-        </span>
-      </button>
-    </a>
-  </div>
-</div>
+    <!-- Project 2: ConsistI2V -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <img src="assets/img/consist2.png" class="img-fluid rounded shadow mb-4" alt="ConsistI2V">
+      </div>
+      <div class="col-md-6">
+        <h4>ConsistI2V</h4>
+        <ul>
+          <li>Image-to-Video generation system with enhanced visual and motion consistency.</li>
+          <li>Built a <strong>Gradio interface</strong> to accept natural language prompts.</li>
+          <li>Used <strong>Stable Diffusion XL</strong> to generate the first image from the prompt.</li>
+          <li>The image and prompt are then passed to the <strong>ConsistI2V model</strong> to generate a smooth and consistent video.</li>
+          <li>Integrated Hugging Face model loading and custom inference settings.</li>
+        </ul>
+        <h6><strong>Applications:</strong></h6>
+        <ul>
+          <li>Video creation from storyboards or concept art for filmmakers and animators.</li>
+          <li>Marketing content generation from a single product image.</li>
+          <li>Educational visualizations from illustrated diagrams.</li>
+          <li>Prototype generation for game developers and VR simulations.</li>
+          <li>Social media content generation from prompts or sketches.</li>
+        </ul>
+        <p><strong>Tech Stack:</strong> PyTorch, Stable Diffusion XL, Gradio</p>
+        <a href="https://github.com/memes-mami/Consistenti2v" target="_blank">
+          <button class="cssbuttons-io">
+            <span>
+              <svg viewBox="0 0 24 24">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
+              </svg>
+              Code
+            </span>
+          </button>
+        </a>
+      </div>
+    </div>
 
-<!-- Project 2: ConsistI2V -->
-<div class="row align-items-center mb-5 flex-md-row-reverse">
-  <div class="col-md-6">
-    <img src="assets/img/consist2.png" class="img-fluid rounded shadow" alt="ConsistI2V">
-  </div>
-  <div class="col-md-6">
-    <h4>ConsistI2V</h4>
-    <ul>
-      <li>Image-to-Video generation system with enhanced visual and motion consistency.</li>
-      <li>Built a <strong>Gradio interface</strong> to accept natural language prompts.</li>
-      <li>Used <strong>Stable Diffusion XL</strong> to generate the first image from the prompt.</li>
-      <li>The image and prompt are then passed to the <strong>ConsistI2V model</strong> to generate a smooth and consistent video.</li>
-      <li>Integrated Hugging Face model loading and custom inference settings.</li>
-    </ul>
-    <h6><strong>Applications:</strong></h6>
-    <ul>
-      <li>Video creation from storyboards or concept art for filmmakers and animators.</li>
-      <li>Marketing content generation from a single product image.</li>
-      <li>Educational visualizations from illustrated diagrams.</li>
-      <li>Prototype generation for game developers and VR simulations.</li>
-      <li>Social media content generation from prompts or sketches.</li>
-    </ul>
-    <p><strong>Tech Stack:</strong> PyTorch, Stable Diffusion XL, Gradio</p>
-    <a href="https://github.com/memes-mami/Consistenti2v" target="_blank">
-      <button class="cssbuttons-io">
-        <span>
-          <svg viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"></path><path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path></svg>
-          Code
-        </span>
-      </button>
-    </a>
-  </div>
-</div>
-<!-- Project 3: FlapPyBird -->
-<div class="row align-items-center mb-5">
-  <div class="col-md-6">
-    <img src="assets/img/flappy.png" class="img-fluid rounded shadow" alt="FlapPyBird">
-  </div>
-  <div class="col-md-6">
-    <h4>FlapPyBird with Gesture Control</h4>
-    <ul>
-      <li>A gesture-controlled version of the classic Flappy Bird game.</li>
-      <li>Players flap the bird by forming an “O” shape using the thumb and index finger.</li>
-      <li>Gesture detection powered by webcam input using computer vision.</li>
-      <li>Supports other interaction modes like blink and touch control.</li>
-      <li>Browser play enabled via PygBag.</li>
-    </ul>
-    <p><strong>Tech Stack:</strong> Python, Pygame, OpenCV, MediaPipe, PygBag</p>
-    <a href="https://github.com/memes-mami/FlapPyBird" target="_blank">
-      <button class="cssbuttons-io">
-        <span>
-          <svg viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"></path><path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path></svg>
-          Code
-        </span>
-      </button>
-    </a>
-  </div>
-</div>
-<!-- Project 4: Chatbot Portfolio -->
-<div class="row align-items-center mb-5 flex-md-row-reverse">
-  <div class="col-md-6">
-    <img src="assets/img/chatbot.png" class="img-fluid rounded shadow" alt="Chatbot">
-  </div>
-  <div class="col-md-6">
-    <h4>Chatbot Portfolio</h4>
-    <ul>
-      <li>A personalized chatbot integrated into a developer portfolio website.</li>
-      <li>Works as a browser extension (tested with Brave, adaptable to others).</li>
-      <li>Processes user queries using a local LLM powered by <strong>Ollama</strong>.</li>
-      <li>Uses a data-driven Q&A system with smart query-response matching.</li>
-      <li>Responds to predefined questions related to skills, projects, and experience.</li>
-      <li>Improves recruiter interaction through a conversational interface.</li>
-    </ul>
-    <p><strong>Future Enhancements:</strong></p>
-    <ul>
-      <li>Support for speech-to-text queries and voice responses.</li>
-      <li>Dynamic retrieval from live project or resume data.</li>
-      <li>Integration with ATS or email parsing tools for job targeting.</li>
-    </ul>
-    <p><strong>Tech Stack:</strong> JavaScript, Pytorch, Web Applictions</p>
-    <a href="#" target="_blank">
-      <button class="cssbuttons-io">
-        <span>
-          <svg viewBox="0 0 24 24">
-            <path d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
-          </svg>
-          Code
-        </span>
-      </button>
-    </a>
-  </div>
-</div>
+    <!-- Project 3: FlapPyBird -->
+    <div class="row align-items-center mb-5">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <img src="assets/img/flappy.png" class="img-fluid rounded shadow mb-4" alt="FlapPyBird">
+      </div>
+      <div class="col-md-6">
+        <h4>FlapPyBird with Gesture Control</h4>
+        <ul>
+          <li>A gesture-controlled version of the classic Flappy Bird game.</li>
+          <li>Players flap the bird by forming an “O” shape using the thumb and index finger.</li>
+          <li>Gesture detection powered by webcam input using computer vision.</li>
+          <li>Supports other interaction modes like blink and touch control.</li>
+          <li>Browser play enabled via PygBag.</li>
+        </ul>
+        <p><strong>Tech Stack:</strong> Python, Pygame, OpenCV, MediaPipe, PygBag</p>
+        <a href="https://github.com/memes-mami/FlapPyBird" target="_blank">
+          <button class="cssbuttons-io">
+            <span>
+              <svg viewBox="0 0 24 24">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
+              </svg>
+              Code
+            </span>
+          </button>
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 4: Chatbot Portfolio -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+      <div class="col-md-6 mb-4 mb-md-0">
+        <img src="assets/img/chatbot.png" class="img-fluid rounded shadow mb-4" alt="Chatbot">
+      </div>
+      <div class="col-md-6">
+        <h4>Chatbot Portfolio</h4>
+        <ul>
+          <li>A personalized chatbot integrated into a developer portfolio website.</li>
+          <li>Works as a browser extension (tested with Brave, adaptable to others).</li>
+          <li>Processes user queries using a local LLM powered by <strong>Ollama</strong>.</li>
+          <li>Uses a data-driven Q&A system with smart query-response matching.</li>
+          <li>Responds to predefined questions related to skills, projects, and experience.</li>
+          <li>Improves recruiter interaction through a conversational interface.</li>
+        </ul>
+        <p><strong>Future Enhancements:</strong></p>
+        <ul>
+          <li>Support for speech-to-text queries and voice responses.</li>
+          <li>Dynamic retrieval from live project or resume data.</li>
+          <li>Integration with ATS or email parsing tools for job targeting.</li>
+        </ul>
+        <p><strong>Tech Stack:</strong> JavaScript, Pytorch, Web Applictions</p>
+        <a href="#" target="_blank">
+          <button class="cssbuttons-io">
+            <span>
+              <svg viewBox="0 0 24 24">
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path d="M24 12l-5.657 5.657-1.414-1.414L21.172 12l-4.243-4.243 1.414-1.414L24 12zM2.828 12l4.243 4.243-1.414 1.414L0 12l5.657-5.657L7.07 7.757 2.828 12zm6.96 9H7.66l6.552-18h2.128L9.788 21z" fill="currentColor"></path>
+              </svg>
+              Code
+            </span>
+          </button>
+        </a>
+      </div>
+    </div>
 
     <div class="text-center mt-4">
       <button onclick="goBack()" class="back-button">
