--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/hat.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/azure.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -604,7 +604,7 @@
       </div>
 
       <div class="col-lg-7">
-        <form action="https://formspree.io/f/xyzjvkqv" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+        <form action="/api/save-and-forward" method="POST" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
           <div class="row gy-4">
             <div class="col-md-6">
               <label for="name-field" class="pb-2">Your Name</label>
