--- a/thankyou.html
+++ b/thankyou.html
@@ -1,30 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Thank You</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      animation: fadeIn 1s ease-in;
     }
+
     .message {
-      background: white;
-      padding: 40px;
-      border-radius: 8px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      background: #ffffff;
+      padding: 50px;
+      border-radius: 16px;
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
       text-align: center;
+      max-width: 400px;
+      width: 90%;
+      transform: scale(0.95);
+      animation: popUp 0.5s ease forwards;
     }
-    a {
-      display: inline-block;
-      margin-top: 20px;
-      color: #007bff;
+
+    h1 {
+      font-size: 2rem;
+      color: #4CAF50;
+      margin-bottom: 15px;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #333;
+      margin-bottom: 30px;
+    }
+
+    .back-button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      height: 3em;
+      padding: 0 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
       text-decoration: none;
+      cursor: pointer;
+      letter-spacing: 1px;
+      transition: all 0.2s ease;
+    }
+
+    .back-button svg {
+      margin-right: 8px;
+      transition: all 0.4s ease-in-out;
+      width: 20px;
+      height: 20px;
+    }
+
+    .back-button:hover {
+      background-color: #388E3C;
+      box-shadow: 9px 9px 33px #d1d1d1, -9px -9px 33px #ffffff;
+      transform: translateY(-2px);
+    }
+
+    .back-button:hover svg {
+      transform: translateX(-8px) scale(1.2);
+    }
+
+    @media (max-width: 480px) {
+      .message {
+        padding: 30px 20px;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      p {
+        font-size: 0.95rem;
+      }
+
+      .back-button {
+        padding: 0 12px;
+        font-size: 0.9rem;
+      }
+
+      .back-button svg {
+        width: 18px;
+        height: 18px;
+      }
+
+      .back-button:hover svg {
+        transform: translateX(-5px) scale(1.1);
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+    }
+
+    @keyframes popUp {
+      to { transform: scale(1); }
     }
   </style>
 </head>
@@ -32,7 +117,12 @@
   <div class="message">
     <h1>✅ Message Sent!</h1>
     <p>Thank you for reaching out. I’ll get back to you soon.</p>
-    <a href="index.html">← Back to Portfolio</a>
+    <a href="index.html" class="back-button">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024">
+        <path d="M874.690416 495.52477c0 11.2973-9.168824 20.466124-20.466124 20.466124l-604.773963 0 188.083679 188.083679c7.992021 7.992021 7.992021 20.947078 0 28.939099-4.001127 3.990894-9.240455 5.996574-14.46955 5.996574-5.239328 0-10.478655-1.995447-14.479783-5.996574l-223.00912-223.00912c-3.837398-3.837398-5.996574-9.046027-5.996574-14.46955 0-5.433756 2.159176-10.632151 5.996574-14.46955l223.019353-223.029586c7.992021-7.992021 20.957311-7.992021 28.949332 0 7.992021 8.002254 7.992021 20.957311 0 28.949332l-188.073446 188.073446 604.753497 0C865.521592 475.058646 874.690416 484.217237 874.690416 495.52477z"></path>
+      </svg>
+      <span>Back to Portfolio</span>
+    </a>
   </div>
 </body>
 </html>
