--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/hat.ico" rel="icon">
-  <link href="assets/img/azure.png" rel="apple-touch-icon">
+  <link href="assets/img/hat.ico" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
